@@ -84,15 +84,9 @@ sub get_debug {
   return $_[0]->parent->get_debug;
 }
 
-sub is_debug {
-	return $_[0]->get_debug;
-}
-sub is_info {
-	return 1;
-}
-sub is_fatal {
-	return 1;
-}
+sub is_debug { $_[0]->get_debug }
+sub is_info  { 1 }
+sub is_fatal { 1 }
 
 sub mute   { $_[0]{muted} = 1 }
 sub unmute { $_[0]{muted} = 0 }
